--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,18 @@
             <artifactId>java-jwt</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.15</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.security.oauth</groupId>-->
 <!--            <artifactId>spring-security-oauth2</artifactId>-->
