--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         url: jdbc:mysql://127.0.0.1:3306/disk?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
     jpa:
         hibernate:
-            ddl-auto: none
+            ddl-auto: update
         show-sql: true
     servlet:
         multipart:
